cmake_minimum_required(VERSION 3.2.2)
project(cpp_training)

add_subdirectory(console-io)
add_subdirectory(variables)
add_subdirectory(functions)
add_subdirectory(inheritance)
add_subdirectory(virtual-functions)
add_subdirectory(operators)
add_subdirectory(parallel-and-concurrent/count-cpu)
add_subdirectory(parallel-and-concurrent/scheduler)
add_subdirectory(parallel-and-concurrent/thread-states)
add_subdirectory(parallel-and-concurrent/detached-thread)
add_subdirectory(parallel-and-concurrent/data-race)
