cmake_minimum_required(VERSION 3.2.2)
project(cpp_training)

add_subdirectory(console-io)
add_subdirectory(variables)
add_subdirectory(functions)
add_subdirectory(inheritance)
add_subdirectory(virtual-functions)
add_subdirectory(operators)
add_subdirectory(casting)
add_subdirectory(pointers)
add_subdirectory(parallel-and-concurrent/count-cpu)
add_subdirectory(parallel-and-concurrent/scheduler)
add_subdirectory(parallel-and-concurrent/thread-states)
add_subdirectory(parallel-and-concurrent/detached-thread)
add_subdirectory(parallel-and-concurrent/data-race)
add_subdirectory(parallel-and-concurrent/data-race-atomic)
add_subdirectory(parallel-and-concurrent/recursive-mutex-problems)
add_subdirectory(parallel-and-concurrent/try-lock)
add_subdirectory(parallel-and-concurrent/shared-mutex)
add_subdirectory(parallel-and-concurrent/scoped-mutex)
add_subdirectory(parallel-and-concurrent/live-lock)
