cmake_minimum_required(VERSION 3.2.2)
project(cpp_training)

add_subdirectory(casting)
add_subdirectory(challenges/continuous-add)
add_subdirectory(challenges/largest-sum-contiguous-subarray)
add_subdirectory(challenges/factorial)
add_subdirectory(console-io)
add_subdirectory(functional-programming/closure)
add_subdirectory(functional-programming/curry-function)
add_subdirectory(functions)
add_subdirectory(inheritance)
add_subdirectory(operators)
add_subdirectory(parallel-and-concurrent/count-cpu)
add_subdirectory(parallel-and-concurrent/data-race)
add_subdirectory(parallel-and-concurrent/data-race-atomic)
add_subdirectory(parallel-and-concurrent/detached-thread)
add_subdirectory(parallel-and-concurrent/live-lock)
add_subdirectory(parallel-and-concurrent/recursive-mutex-problems)
add_subdirectory(parallel-and-concurrent/scheduler)
add_subdirectory(parallel-and-concurrent/scoped-mutex)
add_subdirectory(parallel-and-concurrent/shared-mutex)
add_subdirectory(parallel-and-concurrent/thread-states)
add_subdirectory(parallel-and-concurrent/try-lock)
add_subdirectory(pointers)
add_subdirectory(standard-library/std-accumulate)
add_subdirectory(standard-library/std-algorithm)
add_subdirectory(standard-library/std-array)
add_subdirectory(standard-library/std-bind)
add_subdirectory(standard-library/std-copy)
add_subdirectory(standard-library/std-count)
add_subdirectory(standard-library/std-deque)
add_subdirectory(standard-library/std-function)
add_subdirectory(standard-library/std-functors)
add_subdirectory(standard-library/std-iterator)
add_subdirectory(standard-library/std-list)
add_subdirectory(standard-library/std-map)
add_subdirectory(standard-library/std-pair-tuple)
add_subdirectory(standard-library/std-queue)
add_subdirectory(standard-library/std-set)
add_subdirectory(standard-library/std-stack)
add_subdirectory(standard-library/std-transform)
add_subdirectory(standard-library/std-vector)
add_subdirectory(templates)
add_subdirectory(variables)
add_subdirectory(virtual-functions)
